@@ -1,7 +1,7 @@
 /***************************************************************************
  *                        GPhoton.hpp - Photon class                       *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2011-2014 by Juergen Knoedlseder                         *
+ *  copyright (C) 2011-2018 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -54,7 +54,7 @@ public:
     // Constructors and destructors
     GPhoton(void);
     GPhoton(const GSkyDir& dir, const GEnergy& energy, const GTime& time,
-            const int& mcid = -1);
+            const int& mc_id = -1);
     GPhoton(const GPhoton& photon);
     virtual ~GPhoton(void);
  
@@ -68,11 +68,11 @@ public:
     const GSkyDir& dir(void) const;
     const GEnergy& energy(void) const;
     const GTime&   time(void) const;
-    const int&     mcid(void) const;
+    const int&     mc_id(void) const;
     void           dir(const GSkyDir& dir);
     void           energy(const GEnergy& energy);
     void           time(const GTime& time);
-    void           mcid(const int& mcid);
+    void           mc_id(const int& mc_id);
     std::string    print(const GChatter& chatter = NORMAL) const;
   
 protected:
@@ -143,7 +143,7 @@ const GTime& GPhoton::time(void) const
  * @return Photon Monte-Carlo identifier.
  ***************************************************************************/
 inline
-const int& GPhoton::mcid(void) const
+const int& GPhoton::mc_id(void) const
 {
     return m_mc_id;
 }
@@ -194,9 +194,9 @@ void GPhoton::time(const GTime& time)
  * @param[in] mcid Photon Monte-Carlo identifier.
  ***************************************************************************/
 inline
-void GPhoton::mcid(const int& mcid)
+void GPhoton::mc_id(const int& mc_id)
 {
-    m_mc_id = mcid;
+    m_mc_id = mc_id;
     return;
 }
 
